# WeaveHacks4

./: .gitignore  AGENTS.md  AGUI_COMMAND_LAYER.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  architecture_diagram.md  submission_handoff.md  xprize_zero_revenue_pnl.csv
agent/: .env.example  STRATEGIC_PLANNING.md  main.py  pyproject.toml
agent/src/: agent.py  agui_commands.py  api.py  approvals.py  council_commands.py  council_influence.py  env.py  errors.py  eval_cli.py  financial_api.py  governance.py  governance_models.py  governance_smoke.py  health.py  live_feed.py  openai_council.py  planning.py  playbooks.py  policies.py  promotion_gates.py  realtime.py  redis_layer.py  redis_models.py  redis_store.py  replay_sets.py  role_distinction_eval.py  scenario_engine.py  scenario_tools.py  self_improvement.py  stress_tests.py  structured_models.py  tools.py  util.py  weave_eval.py
agent/tests/: document_test_helpers.py  test_cfo_chair_contract.py  test_company_derivation.py  test_data_confidence_contract.py  test_data_realism_contract.py  test_demo_scenario_packs.py  test_document_store_contract.py  test_document_upload_pipeline_contract.py  test_excel_workbook_ingestion.py  test_executive_error_states_contract.py  test_fpna_forecast_contract.py  test_headcount_hiring_contract.py  test_messy_finance_ops_fixtures.py  test_planning.py  test_policy_governance_retrieval.py  test_procurement_negotiation_contract.py  test_prompt_versions_contract.py  test_reliability_evaluator_contract.py  test_risk_controls_contract.py  test_role_command_contract.py  (+4 more)
frontend/: package.json  (+2 more)
(+215 files in other folders)
