[project]
name = "agent"
version = "0.1.0"
description = "Atlas — AI finance department agent backend (LangGraph + CopilotKit + Weave + Redis)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "copilotkit==0.1.74",
    "langchain==1.0.1",
    "langchain-openai==1.0.1",
    "langgraph==1.0.1",
    # Pin langgraph/langchain sub-packages to CopilotKit's known-good template
    # lock. Unpinned, uv resolves langgraph-prebuilt/langchain-core too new for
    # langgraph 1.0.1 core (ImportError: ExecutionInfo from langgraph.runtime).
    "langchain-core==1.0.0",
    "langgraph-prebuilt==1.0.1",
    "langgraph-checkpoint==3.0.0",
    "langgraph-sdk==0.2.9",
    "openai==1.109.1",
    "fastapi==0.115.12",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.0",
    "ag-ui-langgraph==0.0.22",
    "pydantic>=2.0.0,<3.0.0",
    "weave",
    "redis>=5.0.0",
    "langchain-anthropic>=1.0,<1.1",
]
